<resources>
    <string name="app_name">BirdApp</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="login_Text">Login: </string>
    <string name="pass_Text">Password: </string>
    <string name="switch_Text">What does this do? </string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">Would you like to quit?</string>
    <string name="dialog_title">Continue?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="startChat">Start Chat</string>
    <string name="weatherBtnText">Check Weather</string>
    <string name="sendButton">Send</string>

    <string name="wf_minTempTV">Min Temp: </string>
    <string name="wf_maxTempTV">Max Temp: </string>
    <string name="wf_curTempTV">Current Temp: </string>
    <string name="wf_windSpeedTV">Wind Speed: </string>

    <string name="title_activity_test_toolbar">No Title</string>
    <string name="toolBarBtnText">test Toolbar</string>
    <string name="tb_alertTitle">Do you want to go back?</string>
    <string name="tb_alertPositive">Yes</string>
    <string name="tb_alertNegative">No</string>
    <string name="tb_option_1">option 1</string>
    <string name="tb_option_2">option 2</string>
    <string name="tb_option_3">option 3</string>
    <string name="tb_about">about</string>

    <string name="tb_snack_message">You selected item 1</string>


    <string name="alert_Message">Replace the Snack message?</string>
    <string name="alert_positive">ok</string>
    <string name="alert_negative">no</string>
    <string name="alert_sampleText">Message here</string>

</resources>
